# SimpleVIO

./: .gitignore  CMakeLists.txt  README.md
app/: run_euroc.cpp  test.cpp
config/: euroc_config.yaml
include/: estimator.h  feature_manager.h  feature_tracker.h  parameters.h  system.h
include/backend/: backend.h  edge.h  edge_imu.h  edge_prior.h  edge_reprojection.h  eigen_types.h  imu_integration.h  loss_function.h  problem.h  vertex.h  vertex_inverse_depth.h  vertex_point_xyz.h  vertex_pose.h  vertex_speedbias.h
include/factor/: integration_base.h
include/initialization/: initial_alignment.h  initial_ex_rotation.h  initial_sfm.h  solve_5pts.h
include/utility/: tic_toc.h  utility.h
src/: estimator.cpp  feature_manager.cpp  feature_tracker.cpp  parameters.cpp  system.cpp
src/backend/: edge.cpp  edge_imu.cpp  edge_prior.cpp  edge_reprojection.cpp  imu_integration.cpp  loss_function.cpp  problem.cpp  vertex.cpp  vertex_pose.cpp
src/camodocal/camera_models/: CameraFactory.cc
src/initialization/: initial_alignment.cpp  initial_ex_rotation.cpp  initial_sfm.cpp  solve_5pts.cpp
